tests/test_files_pa3/new/SemanticErrors/ContinueBreakNotLegalTest1.ic
class A
{
	static void main(string[] args) { }
	
	void oneLineWhile(int x)
	{
		while (x == 0)
			continue;
			break;			
	}
}